--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -9,7 +9,7 @@ metadata:
     - url: https://devspaces.apps.cluster-ldvg8.ldvg8.sandbox2768.opentlc.com/?storageType=per-workspace#https://github.com/davgordo/bookinfo-product-page-quarkus-producer-service
       title: OpenShift Dev Spaces
       icon: web
-    - url: https://hawtio-online.apps.cluster-ldvg8.ldvg8.sandbox2768.opentlc.com/online/discover?namespace=system=bookinfo
+    - url: https://hawtio-online-hawtio-operator.apps.cluster-ldvg8.ldvg8.sandbox2768.opentlc.com/online/discover?namespace=system=bookinfo
       title: HawtIO
       icon: web
   annotations:
