update cluster url

--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,7 @@
                       <goal>download</goal> 
                     </goals>
                     <configuration>
-                      <registryUrl>https://registry-apicurio-registry.apps.cluster-ldvg8.ldvg8.sandbox2768.opentlc.com</registryUrl> 
+                      <registryUrl>https://registry-apicurio-registry.apps.cluster-p28j5.p28j5.sandbox1687.opentlc.com</registryUrl> 
                       <artifacts>
                         <artifact>
                             <groupId>com.redhat</groupId>
